# unicodefyi-rs

./: Cargo.toml  README.md
src/: client.rs  types.rs
