[package]
name = "unicodefyi"
version = "0.1.1"
edition = "2021"
authors = ["FYIPedia"]
description = "Unicode character lookup with 17 encodings — async API client for unicodefyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/unicodefyi-rs"
homepage = "https://unicodefyi.com"
documentation = "https://docs.rs/unicodefyi"
readme = "README.md"
keywords = ["unicode", "character", "encoding", "utf8", "codepoint"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
